--- a/BasicFunc.fsproj
+++ b/BasicFunc.fsproj
@@ -3,9 +3,6 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
-  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="HelloYou.fs" />
@@ -23,4 +20,5 @@
     </Content>
 
   </ItemGroup>
+  <Import Project=".\.paket\Paket.Restore.targets" />
 </Project>
